--- a/gnuprumcu/suite/bionic/debian/control
+++ b/gnuprumcu/suite/bionic/debian/control
@@ -2,7 +2,7 @@ Source: gnuprumcu
 Section: embedded
 Priority: optional
 Maintainer: Dimitar Dimitrov <dimitar@dinux.eu>
-Build-Depends: debhelper (>= 11), autotools-dev
+Build-Depends: debhelper (>= 11), autotools-dev, binutils-pru (>= 2.37), gcc-pru (>=11.1)
 Standards-Version: 4.1.3
 Homepage: https://gitlab.com/dinuxbg/gnuprumcu
 #Vcs-Browser: https://salsa.debian.org/debian/gnuprumcu
@@ -10,7 +10,7 @@ Homepage: https://gitlab.com/dinuxbg/gnuprumcu
 
 Package: gnuprumcu
 Architecture: any
-Depends: ${misc:Depends}
+Depends: ${misc:Depends}, binutils-pru (>= 2.37), gcc-pru (>=11.1)
 Description: Linker scripts and device specs for PRU MCU variants
  This package contains the linker scripts, device specs and I/O headers
  for the different PRU variants in different TI SoCs. Install this package
