--- a/gcc-pru/suite/bullseye/debian/control
+++ b/gcc-pru/suite/bullseye/debian/control
@@ -10,8 +10,9 @@ Package: gcc-pru
 Architecture: any
 Section: devel
 Priority: extra
-Depends: ${shlibs:Depends}, ${misc:Depends}, binutils-pru (>= 2.30.51.20180310), gnuprumcu
+Depends: ${shlibs:Depends}, ${misc:Depends}, binutils-pru (>= 2.30.51.20180310)
 Provides: c-compiler-pru
+Recommends: gnuprumcu
 Suggests: task-c-devel, gcc-doc (>= 4:4.8), gcc (>= 4:4.8)
 Description: GNU C compiler (cross compiler for pru)
  This is the GNU C compiler, a fairly portable optimizing compiler which
