--- a/gnuprumcu/suite/bionic/debian/rules
+++ b/gnuprumcu/suite/bionic/debian/rules
@@ -9,12 +9,12 @@ DEB_BUILD_OPTIONS=noautodbgsym
 
 %:
 	dh $@ \
-		--target=pru \
+		--host=pru \
 		--prefix=/usr/lib \
 		--with autoreconf \
 
 
 # dh_make generated override targets
 override_dh_auto_configure:
-	dh_auto_configure -- --target=pru --prefix=/usr/lib
+	dh_auto_configure -- --host=pru --prefix=/usr/lib
 
