bb-code-server (4.0.0.1)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-code-server/suite/bullseye/debian/rules
+++ b/bb-code-server/suite/bullseye/debian/rules
@@ -8,14 +8,17 @@ project_dir=/opt/bb-code-server/app
 
 code_server_version=4.0.0
 
+# Disable dh_link
 override_dh_link:
-	# Just disable for now...
 
+# Disable dh_strip
 override_dh_strip:
-	# Just disable for now...
 
+# Disable dh_strip_nondeterminism
 override_dh_strip_nondeterminism:
-	# Just disable for now...
+
+# Disable dh_shlibdeps
+override_dh_shlibdeps:
 
 override_dh_auto_configure:
 	mkdir -p ./tmp$(project_dir)/
