--- a/bb-code-server/suite/buster/debian/control
+++ b/bb-code-server/suite/buster/debian/control
@@ -9,7 +9,7 @@ Homepage: https://github.com/cdr/code-server
 Package: bb-code-server
 Architecture: armhf
 Pre-Depends: ${misc:Pre-Depends}, adduser, git
-Depends: ${shlibs:Depends}, ${misc:Depends}, systemd (>= 230)
+Depends: systemd (>= 230)
 Description: code-server installer for beagleboard.org
  code-server is a tool to Run VS Code on any machine anywhere and access it in the browser.
 
