--- a/bb-code-server/suite/buster/debian/control
+++ b/bb-code-server/suite/buster/debian/control
@@ -3,6 +3,8 @@ Section: misc
 Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
 Build-Depends: debhelper (>= 9)
+               ca-certificates,
+               git,
 Standards-Version: 4.5.1
 Homepage: https://github.com/cdr/code-server
 
