bb-code-server (4.0.0.3)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-code-server/suite/buster/debian/control
+++ b/bb-code-server/suite/buster/debian/control
@@ -2,7 +2,7 @@ Source: bb-code-server
 Section: misc
 Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
-Build-Depends: debhelper (>= 9)
+Build-Depends: debhelper (>= 9),
                ca-certificates,
                git,
 Standards-Version: 4.5.1
