--- a/bb-code-server/suite/bullseye/debian/control
+++ b/bb-code-server/suite/bullseye/debian/control
@@ -2,7 +2,7 @@ Source: bb-code-server
 Section: misc
 Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
-Build-Depends: debhelper (>= 10)
+Build-Depends: debhelper (>= 10),
                ca-certificates,
                git,
 Standards-Version: 4.5.1
