bb-code-server (4.0.0.4)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-code-server/suite/bullseye/debian/rules
+++ b/bb-code-server/suite/bullseye/debian/rules
@@ -25,6 +25,7 @@ override_dh_auto_configure:
 	git clone https://github.com/beagleboard/VSX-examples /opt/bb-code-server/examples/ --branch main --depth 1
 	cd /opt/bb-code-server/examples/ ; git config user.email "beagle@beagleboard.org" ; git config user.name "BeagleBoard"
 	mv /opt/bb-code-server/examples/.git/ /opt/bb-code-server/examples/dotgit/
+	mv /opt/bb-code-server/examples/.gitignore /opt/bb-code-server/examples/dotgitignore
 	mkdir -p ./tmp/opt/bb-code-server/examples/
 	mv /opt/bb-code-server/examples/* ./tmp/opt/bb-code-server/examples/
 
