--- a/bb-code-server/suite/buster/debian/bb-code-server.bb-code-server.service
+++ b/bb-code-server/suite/buster/debian/bb-code-server.bb-code-server.service
@@ -8,7 +8,7 @@ After=multi-user.target
 Type=exec
 User=debian
 Group=debian
-ExecStart=/opt/bb-code-server/app/bin/code-server --auth none --disable-telemetry --disable-update-check --config /opt/bb-code-server/config/config.yaml --extensions-dir /opt/bb-code-server/extensions/ --bind-addr 0.0.0.0:3000
+ExecStart=/opt/bb-code-server/app/bin/code-server --auth none --disable-telemetry --disable-update-check --config /opt/bb-code-server/config/config.yaml --extensions-dir /opt/bb-code-server/extensions/ --bind-addr 0.0.0.0:3000 /home/debian/examples/BeagleBoard.code-workspace
 Restart=always
 RestartSec=15
 
