bbb.io-vsx-examples (1.20211215.1)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-vsx-examples/suite/bullseye/debian/control
+++ b/bbb.io-vsx-examples/suite/bullseye/debian/control
@@ -3,7 +3,7 @@ Section: misc
 Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
 Build-Depends:
- debhelper (= 10)
+ debhelper (>= 10)
  , ca-certificates
  , git
 Standards-Version: 4.5.1
