--- a/bb-code-server/suite/bullseye/debian/control
+++ b/bb-code-server/suite/bullseye/debian/control
@@ -2,16 +2,21 @@ Source: bb-code-server
 Section: misc
 Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
-Build-Depends: debhelper (>= 10),
-               ca-certificates,
-               git,
+Build-Depends:
+ debhelper (>= 10)
+ , ca-certificates
+ , git
 Standards-Version: 4.5.1
-Homepage: https://github.com/cdr/code-server
+Homepage: https://github.com/coder/code-server
 
 Package: bb-code-server
 Architecture: armhf
-Pre-Depends: ${misc:Pre-Depends}, adduser, git
-Depends: systemd (>= 230), dphys-swapfile
+Pre-Depends:
+ ${misc:Pre-Depends}
+ , bbb.io-vsx-examples
+Depends:
+ systemd (>= 230)
+ , dphys-swapfile
 Description: code-server installer for beagleboard.org
  code-server is a tool to Run VS Code on any machine anywhere and access it in the browser.
 
