bb-wl18xx-firmware (1.20211222.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-wl18xx-firmware/suite/focal/debian/control
+++ b/bb-wl18xx-firmware/suite/focal/debian/control
@@ -7,7 +7,13 @@ Standards-Version: 4.5.1
 
 Package: bb-wl18xx-firmware
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, bb-usb-gadgets, bc, bsdmainutils, coreutils, linux-firmware
+Depends: ${shlibs:Depends}
+ , ${misc:Depends}
+ , bb-usb-gadgets
+ , bc
+ , bsdmainutils
+ , coreutils
+ , linux-firmware
 Description: beagleboard.org wl18xx firmware
  wl18xx bluetooth firmware
 
