--- a/bb-wl18xx-firmware/suite/bullseye/debian/control
+++ b/bb-wl18xx-firmware/suite/bullseye/debian/control
@@ -7,7 +7,13 @@ Standards-Version: 4.5.1
 
 Package: bb-wl18xx-firmware
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, bb-usb-gadgets, bc, bsdmainutils, coreutils, firmware-ti-connectivity
+Depends: ${shlibs:Depends}
+ , ${misc:Depends}
+ , bb-usb-gadgets
+ , bc
+ , bsdmainutils
+ , coreutils
+ , firmware-ti-connectivity
 Description: beagleboard.org wl18xx firmware
  wl18xx bluetooth firmware
 
