--- a/bb-wl18xx-firmware/suite/buster/debian/control
+++ b/bb-wl18xx-firmware/suite/buster/debian/control
@@ -5,10 +5,15 @@ Maintainer: Robert Nelson <robertcnelson@gmail.com>
 Build-Depends: debhelper (>= 9)
 Standards-Version: 3.9.6
 
-
 Package: bb-wl18xx-firmware
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, bb-usb-gadgets, bc, bsdmainutils, coreutils, firmware-ti-connectivity
+Depends: ${shlibs:Depends}
+ , ${misc:Depends}
+ , bb-usb-gadgets
+ , bc
+ , bsdmainutils
+ , coreutils
+ , firmware-ti-connectivity
 Description: beagleboard.org wl18xx firmware
  wl18xx bluetooth firmware
 
