bb-simppru: Add gnuprumcu dependency
Now that gcc-pru does not depend on gnuprumcu, we need to explicitly
mention it.

Signed-off-by: Dimitar Dimitrov <dimitar@dinux.eu>

--- a/bb-simppru/suite/bullseye/debian/control
+++ b/bb-simppru/suite/bullseye/debian/control
@@ -8,12 +8,13 @@ Build-Depends:  debhelper (>= 9),
 		cmake,
 		flex,
 		gcc-pru,
+		gnuprumcu,
 		git,
 Standards-Version: 3.9.8
 Homepage: https://github.com/VedantParanjape/simpPRU
 
 Package: bb-simppru
 Architecture: armhf
-Depends: ${shlibs:Depends}, ${misc:Depends}, gcc-pru
+Depends: ${shlibs:Depends}, ${misc:Depends}, gcc-pru, gnuprumcu
 Description: beagleboard.org simppru
  beagleboard.org simppru for beagleboard devices
