bbb.io-kernel (1.20211231.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/buster/debian/control
+++ b/bbb.io-kernel/suite/buster/debian/control
@@ -3,21 +3,27 @@ Source: bbb.io-kernel
 Section: misc
 Priority: optional
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
-Build-Depends: debhelper-compat (= 12)
+Build-Depends:
+ debhelper-compat (= 12)
 Standards-Version: 4.5.0
 Rules-Requires-Root: no
 
 Package: bbb.io-kernel-tasks
 Architecture: all
-Depends: tasksel, ${misc:Depends}
+Depends:
+ tasksel
+ , ${misc:Depends}
 Description: BeagleBoard.org Kernel Branches
  This package contains tasksel information for the BeagleBoard.org Kernel Branch.
 
 Package: bbb.io-kernel-4.19-ti
 Section: metapackages
 Architecture: all
-Pre-Depends: linux-image-4.19.94-ti-r70,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Pre-Depends:
+ linux-image-4.19.94-ti-r70
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-4.19.94-ti-r70,
 Description: BeagleBoard.org 4.19-ti
  This metapackage will install linux-image-4.19-ti in Debian.
@@ -25,30 +31,41 @@ Description: BeagleBoard.org 4.19-ti
 Package: bbb.io-kernel-4.19-ti-am335x
 Section: metapackages
 Architecture: all
-Pre-Depends: linux-image-4.19.94-ti-r70,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-4.19.94-ti-r70,
-            ti-sgx-ti335x-modules-4.19.94-ti-r70,
-            bb-u-boot-am335x-evm
+Pre-Depends:
+ linux-image-4.19.94-ti-r70
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-4.19.94-ti-r70
+ , ti-sgx-ti335x-modules-4.19.94-ti-r70
+ , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 4.19-ti for am335x
  This metapackage will install linux-image-4.19-ti for am335x in Debian.
 
 Package: bbb.io-kernel-4.19-ti-am57xx
 Section: metapackages
 Architecture: all
-Pre-Depends: linux-image-4.19.94-ti-r70,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-4.19.94-ti-r70,
-            ti-sgx-jacinto6evm-modules-4.19.94-ti-r70,
-            bb-u-boot-am57xx-evm
+Pre-Depends:
+ linux-image-4.19.94-ti-r70
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-4.19.94-ti-r70
+ , ti-sgx-jacinto6evm-modules-4.19.94-ti-r70
+ , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 4.19-ti for am57xx
  This metapackage will install linux-image-4.19-ti for am57xx in Debian.
 
 Package: bbb.io-kernel-4.19-ti-rt
 Section: metapackages
 Architecture: all
-Pre-Depends: linux-image-4.19.94-ti-rt-r70,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Pre-Depends:
+ linux-image-4.19.94-ti-rt-r70
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-4.19.94-ti-rt-r70,
 Description: BeagleBoard.org 4.19-ti-rt
  This metapackage will install linux-image-4.19-ti-rt in Debian.
@@ -56,30 +73,41 @@ Description: BeagleBoard.org 4.19-ti-rt
 Package: bbb.io-kernel-4.19-ti-rt-am335x
 Section: metapackages
 Architecture: all
-Pre-Depends: linux-image-4.19.94-ti-rt-r70,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-4.19.94-ti-rt-r70,
-            ti-sgx-ti335x-modules-4.19.94-ti-rt-r70,
-            bb-u-boot-am335x-evm
+Pre-Depends:
+ linux-image-4.19.94-ti-rt-r70
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-4.19.94-ti-rt-r70
+ , ti-sgx-ti335x-modules-4.19.94-ti-rt-r70
+ , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 4.19-ti-rt for am335x
  This metapackage will install linux-image-4.19-ti-rt for am335x in Debian.
 
 Package: bbb.io-kernel-4.19-ti-rt-am57xx
 Section: metapackages
 Architecture: all
-Pre-Depends: linux-image-4.19.94-ti-rt-r70,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-4.19.94-ti-rt-r70,
-            ti-sgx-jacinto6evm-modules-4.19.94-ti-rt-r70,
-            bb-u-boot-am57xx-evm
+Pre-Depends:
+ linux-image-4.19.94-ti-rt-r70
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-4.19.94-ti-rt-r70
+ , ti-sgx-jacinto6evm-modules-4.19.94-ti-rt-r70
+ , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 4.19-ti-rt for am57xx
  This metapackage will install linux-image-4.19-ti-rt for am57xx in Debian.
 
 Package: bbb.io-kernel-5.4-ti
 Section: metapackages
 Architecture: all
-Pre-Depends: linux-image-5.4.106-ti-r37,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Pre-Depends:
+ linux-image-5.4.106-ti-r37
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.4.106-ti-r37,
 Description: BeagleBoard.org 5.4-ti
  This metapackage will install linux-image-5.4-ti in Debian.
@@ -87,30 +115,41 @@ Description: BeagleBoard.org 5.4-ti
 Package: bbb.io-kernel-5.4-ti-am335x
 Section: metapackages
 Architecture: all
-Pre-Depends: linux-image-5.4.106-ti-r37,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.4.106-ti-r37,
-            ti-sgx-ti335x-modules-5.4.106-ti-r37,
-            bb-u-boot-am335x-evm
+Pre-Depends:
+ linux-image-5.4.106-ti-r37
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-5.4.106-ti-r37
+ , ti-sgx-ti335x-modules-5.4.106-ti-r37
+ , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 5.4-ti for am335x
  This metapackage will install linux-image-5.4-ti for am335x in Debian.
 
 Package: bbb.io-kernel-5.4-ti-am57xx
 Section: metapackages
 Architecture: all
-Pre-Depends: linux-image-5.4.106-ti-r37,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.4.106-ti-r37,
-            ti-sgx-jacinto6evm-modules-5.4.106-ti-r37,
-            bb-u-boot-am57xx-evm
+Pre-Depends:
+ linux-image-5.4.106-ti-r37
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-5.4.106-ti-r37
+ , ti-sgx-jacinto6evm-modules-5.4.106-ti-r37
+ , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 5.4-ti for am57xx
  This metapackage will install linux-image-5.4-ti for am57xx in Debian.
 
 Package: bbb.io-kernel-5.4-ti-rt
 Section: metapackages
 Architecture: all
-Pre-Depends: linux-image-5.4.106-ti-rt-r37,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Pre-Depends:
+ linux-image-5.4.106-ti-rt-r37
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.4.106-ti-rt-r37,
 Description: BeagleBoard.org 5.4-ti-rt
  This metapackage will install linux-image-5.4-ti-rt in Debian.
@@ -118,30 +157,41 @@ Description: BeagleBoard.org 5.4-ti-rt
 Package: bbb.io-kernel-5.4-ti-rt-am335x
 Section: metapackages
 Architecture: all
-Pre-Depends: linux-image-5.4.106-ti-rt-r37,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.4.106-ti-rt-r37,
-            ti-sgx-ti335x-modules-5.4.106-ti-rt-r37,
-            bb-u-boot-am335x-evm
+Pre-Depends:
+ linux-image-5.4.106-ti-rt-r37
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-5.4.106-ti-rt-r37
+ , ti-sgx-ti335x-modules-5.4.106-ti-rt-r37
+ , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 5.4-ti-rt for am335x
  This metapackage will install linux-image-5.4-ti-rt for am335x in Debian.
 
 Package: bbb.io-kernel-5.4-ti-rt-am57xx
 Section: metapackages
 Architecture: all
-Pre-Depends: linux-image-5.4.106-ti-rt-r37,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.4.106-ti-rt-r37,
-            ti-sgx-jacinto6evm-modules-5.4.106-ti-rt-r37,
-            bb-u-boot-am57xx-evm
+Pre-Depends:
+ linux-image-5.4.106-ti-rt-r37
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-5.4.106-ti-rt-r37
+ , ti-sgx-jacinto6evm-modules-5.4.106-ti-rt-r37
+ , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 5.4-ti-rt for am57xx
  This metapackage will install linux-image-5.4-ti-rt for am57xx in Debian.
 
 Package: bbb.io-kernel-5.10-ti
 Section: metapackages
 Architecture: all
-Pre-Depends: linux-image-5.10.87-ti-r33,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Pre-Depends:
+ linux-image-5.10.87-ti-r33
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.10.87-ti-r33,
 Description: BeagleBoard.org 5.10-ti
  This metapackage will install linux-image-5.10-ti in Debian.
@@ -149,30 +199,41 @@ Description: BeagleBoard.org 5.10-ti
 Package: bbb.io-kernel-5.10-ti-am335x
 Section: metapackages
 Architecture: all
-Pre-Depends: linux-image-5.10.87-ti-r33,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.87-ti-r33,
-            ti-sgx-ti335x-modules-5.10.87-ti-r33,
-            bb-u-boot-am335x-evm
+Pre-Depends:
+ linux-image-5.10.87-ti-r33
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-5.10.87-ti-r33
+ , ti-sgx-ti335x-modules-5.10.87-ti-r33
+ , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 5.10-ti for am335x
  This metapackage will install linux-image-5.10-ti for am335x in Debian.
 
 Package: bbb.io-kernel-5.10-ti-am57xx
 Section: metapackages
 Architecture: all
-Pre-Depends: linux-image-5.10.87-ti-r33,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.87-ti-r33,
-            ti-sgx-jacinto6evm-modules-5.10.87-ti-r33,
-            bb-u-boot-am57xx-evm
+Pre-Depends:
+ linux-image-5.10.87-ti-r33
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-5.10.87-ti-r33
+ , ti-sgx-jacinto6evm-modules-5.10.87-ti-r33
+ , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 5.10-ti for am57xx
  This metapackage will install linux-image-5.10-ti for am57xx in Debian.
 
 Package: bbb.io-kernel-5.10-ti-rt
 Section: metapackages
 Architecture: all
-Pre-Depends: linux-image-5.10.87-ti-rt-r33,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Pre-Depends:
+ linux-image-5.10.87-ti-rt-r33
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.10.87-ti-rt-r33,
 Description: BeagleBoard.org 5.10-ti-rt
  This metapackage will install linux-image-5.10-ti-rt in Debian.
@@ -180,22 +241,30 @@ Description: BeagleBoard.org 5.10-ti-rt
 Package: bbb.io-kernel-5.10-ti-rt-am335x
 Section: metapackages
 Architecture: all
-Pre-Depends: linux-image-5.10.87-ti-rt-r33,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.87-ti-rt-r33,
-            ti-sgx-ti335x-modules-5.10.87-ti-rt-r33,
-            bb-u-boot-am335x-evm
+Pre-Depends:
+ linux-image-5.10.87-ti-rt-r33
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-5.10.87-ti-rt-r33
+ , ti-sgx-ti335x-modules-5.10.87-ti-rt-r33
+ , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 5.10-ti-rt for am335x
  This metapackage will install linux-image-5.10-ti-rt for am335x in Debian.
 
 Package: bbb.io-kernel-5.10-ti-rt-am57xx
 Section: metapackages
 Architecture: all
-Pre-Depends: linux-image-5.10.87-ti-rt-r33,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.87-ti-rt-r33,
-            ti-sgx-jacinto6evm-modules-5.10.87-ti-rt-r33,
-            bb-u-boot-am57xx-evm
+Pre-Depends:
+ linux-image-5.10.87-ti-rt-r33
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-5.10.87-ti-rt-r33
+ , ti-sgx-jacinto6evm-modules-5.10.87-ti-rt-r33
+ , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 5.10-ti-rt for am57xx
  This metapackage will install linux-image-5.10-ti-rt for am57xx in Debian.
 
@@ -271,6 +340,15 @@ Recommends: libpruio-modules-5.10.87-bone-rt-r59,
 Description: BeagleBoard.org 5.10-bone-rt for am335x
  This metapackage will install linux-image-5.10-bone-rt for am335x in Debian.
 
+Package: bbb.io-kernel-5.15-bone-rt
+Section: metapackages
+Architecture: all
+Pre-Depends: linux-image-5.15.10-bone-rt-r18,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.15.10-bone-rt-r18,
+Description: BeagleBoard.org 5.15-bone-rt for am335x
+ This metapackage will install linux-image-5.15-bone-rt for am335x in Debian.
+
 Package: bbb.io-kernel-4.19-armv7
 Section: metapackages
 Architecture: all
@@ -333,6 +411,15 @@ Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.10.83-armv7-rt-x58,
 Description: BeagleBoard.org 5.10-armv7-rt for armv7
  This metapackage will install linux-image-5.10-armv7-rt for armv7 in Debian.
+
+Package: bbb.io-kernel-5.15-armv7-rt
+Section: metapackages
+Architecture: all
+Pre-Depends: linux-image-5.15.10-armv7-rt-x18,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.15.10-armv7-rt-x18,
+Description: BeagleBoard.org 5.15-armv7-rt for armv7
+ This metapackage will install linux-image-5.15-armv7-rt for armv7 in Debian.
 
 Package: bbb.io-kernel-4.19-armv7-lpae
 Section: metapackages
