--- a/bb-u-boot-am335x-evm-debian-11-ubuntu-2004/suite/bullseye/debian/control
+++ b/bb-u-boot-am335x-evm-debian-11-ubuntu-2004/suite/bullseye/debian/control
@@ -2,13 +2,13 @@ Source: bb-u-boot-am335x-evm
 Section: misc
 Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
-Build-Depends:  debhelper (>= 9),
-		bc,
-		bison,
-		ca-certificates,
-		flex,
-		git,
-		libssl-dev,
+Build-Depends:
+ debhelper (>= 10)
+ , bc,
+ , bison
+ , ca-certificates
+ , flex
+ , git
 Standards-Version: 4.5.1
 Homepage: https://github.com/beagleboard/u-boot
 
