--- a/bb-u-boot-am335x-evm/suite/stretch/debian/control
+++ b/bb-u-boot-am335x-evm/suite/stretch/debian/control
@@ -2,12 +2,13 @@ Source: bb-u-boot-am335x-evm
 Section: misc
 Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
-Build-Depends:  debhelper (>= 9),
-		bc,
-		bison,
-		ca-certificates,
-		flex,
-		git,
+Build-Depends:
+ debhelper (>= 9)
+ , bc,
+ , bison
+ , ca-certificates
+ , flex
+ , git
 Standards-Version: 3.9.8
 Homepage: https://github.com/beagleboard/u-boot
 
