bb-beagle-version (1.20210928.2)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-beagle-version/suite/focal/debian/control
+++ b/bb-beagle-version/suite/focal/debian/control
@@ -2,7 +2,8 @@ Source: bb-beagle-version
 Section: misc
 Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
-Build-Depends: debhelper (>= 10)
+Build-Depends:
+ debhelper (>= 10)
 Standards-Version: 4.5.1
 
 Package: bb-beagle-version
