--- a/bb-customizations/suite/bullseye/debian/control
+++ b/bb-customizations/suite/bullseye/debian/control
@@ -2,9 +2,9 @@ Source: bb-customizations
 Section: misc
 Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
-Build-Depends: debhelper (>= 10)
+Build-Depends:
+ debhelper (>= 10)
 Standards-Version: 4.5.1
-
 
 Package: bb-customizations
 Architecture: all
