--- a/git-uMTP-Responder/suite/bullseye/debian/umtprd.conf
+++ b/git-uMTP-Responder/suite/bullseye/debian/umtprd.conf
@@ -1,36 +1,66 @@
 #
 # uMTP Responder config file
+# Must be copied to /etc/umtprd/umtprd.conf
 #
 
 # Loop / daemon mode
-# Set to 0 to shutdown when the link is disconnected.
+# Set to 1 to don't shutdown uMTPrd when the link is disconnected.
+
 loop_on_disconnect 1
 
-# storage command : Create add a storage entry point. Up to 16 entry points supported
-# Syntax : storage "PATH" "NAME"
+# Force the default UID/GID to use for each storage file operations.
+# Note : When no default UID/GID are specified the umtprd process UID/GID 
+#        are used instead.
 
-# NOTICE: currently the systemd unit file allows r/w
-# access only to /var/lib/umtp
-# See /usr/share/doc/umtp-responder/README.Debian
+#default_uid 33
+#default_gid 33
 
-storage "/var/lib/umtp" "shared folder" "rw"
-# storage "/home/USER/foo"  "home folder" "rw"
-# storage "/www"            "www folder" "ro,notmounted"
+default_uid 1000
+default_gid 1000
+
+# Storage command : Create add a storage entry point. Up to 16 entry points supported
+# Syntax : storage "PATH" "NAME" "OPTIONS" 
+# Possible store options :
+#     "rw" = read/write access
+#     "ro" = read only
+#     "notmounted" = not mounted by default
+#     "locked" = lock/unlock feature enabled
+
+#storage "/"      "root folder" "rw"
+#storage "/home"  "home folder" "ro"
+#storage "/www"   "www folder" "ro,notmounted"
+
+# Add the "locked" option to enable the store lock/unlock feature.
+# Execute "umtprd -cmd:unlock" to unlock the locked stores and "umtprd -cmd:lock" to lock them again.
+
+#storage "/"      "lockable root folder" "rw,locked"
+
+# A user storage using another UID/GID for file operations.
+
+#storage "/home/user" "user folder" "rw,locked,uid=33,gid=33"
+
+#Disable wide options;
+#storage "/boot" "/boot/ (RW)" "rw"
+#storage "/etc/wpa_supplicant/" "WiFi Credentials (RW)" "rw"
+storage "/opt" "/opt/ (RW)" "rw"
 
 #
-# Uncomment the following line if you want to
-# override the system default umask value for
+# Uncomment the following line if you want to 
+# override the system default umask value for 
 # the uploaded files.
 #
 #umask 022
+umask 022
 
 # Set the USB manufacturer string
 
-manufacturer "Viveris Technologies"
+#manufacturer "Viveris Technologies"
+manufacturer "BeagleBoard.org"
 
 # Set the USB Product string
 
-product "Viveris Technologies"
+#product "Viveris Technologies"
+product "BeagleBoard.org"
 
 # Set the USB Serial number string
 
@@ -72,6 +102,10 @@ usb_dev_version 0x3008
 # usb_max_rd_buffer_size 0x200      # MAX usb read size. Must be a multiple of 512 and be less than read_buffer_cache_size
 # usb_max_wr_buffer_size 0x200      # MAX usb write size. Must be a multiple of 512.
 # read_buffer_cache_size 0x4000     # Read file cache buffer. Must be a 2^x value.
+
+usb_max_rd_buffer_size 0x200      # MAX usb read size. Must be a multiple of 512 and be less than read_buffer_cache_size
+usb_max_wr_buffer_size 0x200      # MAX usb write size. Must be a multiple of 512.
+read_buffer_cache_size 0x4000     # Read file cache buffer. Must be a 2^x value.
 
 #
 # USB gadget device driver path
