--- a/bb-customizations/suite/bullseye/debian/control
+++ b/bb-customizations/suite/bullseye/debian/control
@@ -7,7 +7,9 @@ Build-Depends:
 Standards-Version: 4.5.1
 
 Package: bb-customizations
-Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Architecture: armhf
+Depends:
+ ${shlibs:Depends}
+ , ${misc:Depends}
 Description: beagleboard.org customizations
  beagleboard.org customizations
