--- a/bb-customizations/suite/bullseye/debian/rules
+++ b/bb-customizations/suite/bullseye/debian/rules
@@ -2,10 +2,8 @@
 # -*- makefile -*-
 
 # Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+export DH_VERBOSE=1
 
 %:
 	dh $@
 
-override_dh_builddeb:
-	dh_builddeb -- -Zgzip
