--- a/bbb.io-kernel/suite/bullseye/debian/control
+++ b/bbb.io-kernel/suite/bullseye/debian/control
@@ -313,6 +313,15 @@ Recommends: libpruio-modules-5.15.11-bone17,
 Description: BeagleBoard.org 5.15-bone for am335x
  This metapackage will install linux-image-5.15-bone for am335x in Debian.
 
+Package: bbb.io-kernel-5.16-bone
+Section: metapackages
+Architecture: all
+Pre-Depends: linux-image-5.16.2-bone11,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.16.2-bone11,
+Description: BeagleBoard.org 5.16-bone for am335x
+ This metapackage will install linux-image-5.16-bone for am335x in Debian.
+
 Package: bbb.io-kernel-4.19-bone-rt
 Section: metapackages
 Architecture: all
