--- a/bbb.io-beagleconnect-msp430/suite/bullseye/debian/control
+++ b/bbb.io-beagleconnect-msp430/suite/bullseye/debian/control
@@ -6,7 +6,8 @@ Build-Depends:
  debhelper (>= 10)
  , ca-certificates
  , git
- , python2-minimal
+ , python2-dev
+ , python-tk
 Standards-Version: 4.5.1
 
 Package: beagleconnect-msp430
