--- a/bbb.io-beagleconnect-msp430/suite/bullseye/debian/rules
+++ b/bbb.io-beagleconnect-msp430/suite/bullseye/debian/rules
@@ -9,6 +9,6 @@ override_dh_strip:
 
 override_dh_auto_configure:
 	git clone https://github.com/statropy/ti_msp430_python_tools
-	cd ./ti_msp430_python_tools/python-msp430-tools ; python2.7 setup.py install
+	cd ./ti_msp430_python_tools/python-msp430-tools ; python2.7 setup.py install --prefix=/usr
 %:
 	dh $@
