--- a/bbb.io-beagleconnect-msp430/suite/bullseye/debian/control
+++ b/bbb.io-beagleconnect-msp430/suite/bullseye/debian/control
@@ -11,7 +11,7 @@ Build-Depends:
 Standards-Version: 4.5.1
 
 Package: beagleconnect-msp430
-Architecture: armhf
+Architecture: any
 Depends:
  ${shlibs:Depends}
  , ${misc:Depends}
