--- a/bbb.io-beagleconnect-msp430/suite/bullseye/debian/rules
+++ b/bbb.io-beagleconnect-msp430/suite/bullseye/debian/rules
@@ -6,12 +6,9 @@ export DH_VERBOSE=1
 
 override_dh_strip:
 	# Just disable for now...
-	ls -lh /usr/lib/python2.7/site-packages/
-	ls -lh ti_msp430_python_tools/python-msp430-tools
-	ls -lh ti_msp430_python_tools/python-msp430-tools/build/
 
 override_dh_auto_configure:
 	git clone https://github.com/statropy/ti_msp430_python_tools
-	cd ./ti_msp430_python_tools/python-msp430-tools ; python2.7 setup.py install --prefix=/usr
+	cd ./ti_msp430_python_tools/python-msp430-tools ; python2.7 setup.py install --prefix=/usr ; tree ./ ; tree /usr/lib/python2.7/
 %:
 	dh $@
