--- a/bb-node-red-installer-next/suite/bullseye/debian/control
+++ b/bb-node-red-installer-next/suite/bullseye/debian/control
@@ -2,15 +2,20 @@ Source: bb-node-red-installer
 Section: misc
 Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
-Build-Depends: debhelper (>= 10),
-               python,
+Build-Depends:
+ debhelper (>= 10)
+ , python
 Standards-Version: 4.5.1
 Homepage: https://github.com/rcn-ee/repos
 
 Package: bb-node-red-installer
 Architecture: armhf
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}, systemd (>= 230), adduser
+Depends:
+ ${shlibs:Depends}
+ , ${misc:Depends}
+ , systemd (>= 230)
+ , adduser
 Description: Node-RED installer for beagleboard.org
  Node-RED is a tool for wiring together hardware devices, APIs and online services in new and interesting ways.
 
