--- a/bb-node-red-installer-next/suite/bullseye/debian/rules
+++ b/bb-node-red-installer-next/suite/bullseye/debian/rules
@@ -98,6 +98,13 @@ override_dh_auto_configure:
 	TERM=dumb $(node_bin) $(npm_bin) install -g $(tmp_dir)/beaglebone-io/*.tgz --unsafe-perm=true --loglevel=error --arch=arm --prefix $(project_dir) --no-save
 	rm -rf $(tmp_dir)/beaglebone-io/
 	echo "*************************************************************"
+	echo "node-red-node-machinechat"
+	echo "Fake Install: node-red-node-machinechat@github"
+	TERM=dumb $(node_bin) $(npm_bin) install -g --unsafe-perm=true --loglevel=error --arch=arm --prefix /tmp https://github.com/MachinechatLLC/node-red-node-machinechat
+	cd $(tmp_dir)/node-red-node-machinechat/ ; TERM=dumb $(node_bin) $(npm_bin) pack
+	TERM=dumb $(node_bin) $(npm_bin) install -g $(tmp_dir)/node-red-node-machinechat/*.tgz --unsafe-perm=true --loglevel=error --arch=arm --prefix $(project_dir) --no-save
+	rm -rf $(tmp_dir)/node-red-node-machinechat/
+	echo "*************************************************************"
 	echo "move $(project_dir)/ to ./tmp$(project_dir)/"
 	mkdir -p ./tmp$(project_dir)/
 	mv $(project_dir)/* ./tmp$(project_dir)/
