--- a/bb-node-red-installer-next/suite/bullseye/debian/control
+++ b/bb-node-red-installer-next/suite/bullseye/debian/control
@@ -4,7 +4,9 @@ Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
 Build-Depends:
  debhelper (>= 10)
+ , ca-certificates
  , python
+ , git
 Standards-Version: 4.5.1
 Homepage: https://github.com/rcn-ee/repos
 
