bb-node-red-installer (2.2.0.3)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-node-red-installer-next/suite/bullseye/debian/control
+++ b/bb-node-red-installer-next/suite/bullseye/debian/control
@@ -7,6 +7,7 @@ Build-Depends:
  , ca-certificates
  , python
  , git
+ , tree
 Standards-Version: 4.5.1
 Homepage: https://github.com/rcn-ee/repos
 
