--- a/bb-node-red-installer-next/suite/bullseye/debian/rules
+++ b/bb-node-red-installer-next/suite/bullseye/debian/rules
@@ -27,6 +27,8 @@ node_red_contrib_johnny5_version=0.50.0
 johnny_five_version=2.1.0
 beaglebone_io_version=4.1.0
 
+node_red_node_machinechat=0.1.9
+
 override_dh_auto_configure:
 	mkdir -p $(project_dir)/
 	tar xf ./debian/node-$(nodejs_version)-linux-armv7l.tar.xz -C $(project_dir)/ --strip-components 1
@@ -98,9 +100,9 @@ override_dh_auto_configure:
 	TERM=dumb $(node_bin) $(npm_bin) install -g $(tmp_dir)/beaglebone-io/*.tgz --unsafe-perm=true --loglevel=error --arch=arm --prefix $(project_dir) --no-save
 	rm -rf $(tmp_dir)/beaglebone-io/
 	echo "*************************************************************"
-	echo "node-red-node-machinechat"
-	echo "Fake Install: node-red-node-machinechat@github"
-	TERM=dumb $(node_bin) $(npm_bin) install -g --unsafe-perm=true --loglevel=error --arch=arm --prefix /tmp https://github.com/MachinechatLLC/node-red-node-machinechat
+	echo "@machinechat/node-red-node-machinechat"
+	echo "Fake Install: @machinechat/node-red-node-machinechat@$(node_red_node_machinechat)"
+	TERM=dumb $(node_bin) $(npm_bin) install -g --unsafe-perm=true --loglevel=error --arch=arm --prefix /tmp @machinechat/node-red-node-machinechat@$(node_red_node_machinechat)
 	tree $(tmp_dir)/
 	cd $(tmp_dir)/@machinechat/node-red-node-machinechat/ ; TERM=dumb $(node_bin) $(npm_bin) pack
 	TERM=dumb $(node_bin) $(npm_bin) install -g $(tmp_dir)/@machinechat/node-red-node-machinechat/*.tgz --unsafe-perm=true --loglevel=error --arch=arm --prefix $(project_dir) --no-save
