bbb.io-xfce4-desktop (1.20220216.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-xfce4-desktop/suite/bullseye/debian/control
+++ b/bbb.io-xfce4-desktop/suite/bullseye/debian/control
@@ -23,5 +23,7 @@ Depends:
  , xfwm4
  , adwaita-qt
  , qt5ct
+ , xserver-xorg-video-fbdev
+ , xserver-xorg-video-armada-etnaviv
 Description: BeagleBoard.org xfce4 desktop
  This package contains tasksel information for the BeagleBoard.org xfce4 desktop.
