--- a/bb-code-server/suite/buster/debian/bb-code-server.bb-code-server.service
+++ b/bb-code-server/suite/buster/debian/bb-code-server.bb-code-server.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=BeagleBoard.org Code Server
-Wants=network.target
 Documentation=https://github.com/coder/code-server/tree/main/docs
+Wants=network.target dphys-swapfile.service
 After=multi-user.target
 
 [Service]
