--- a/ti-devmem2/suite/buster/debian/rules
+++ b/ti-devmem2/suite/buster/debian/rules
@@ -8,6 +8,8 @@ DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 # Uncomment this to turn on verbose mode.
 export DH_VERBOSE=1
 
+export CROSS_COMPILE=arm-linux-gnueabihf-
+
 %:
 	dh $@
 
