--- a/bb-code-server-next/suite/bullseye/debian/bb-code-server-next.bb-code-server-next.service
+++ b/bb-code-server-next/suite/bullseye/debian/bb-code-server-next.bb-code-server-next.service
@@ -1,13 +1,19 @@
 [Unit]
-Description=BeagleBoard.org Code Server Next
-After=network.target
-ConditionFileIsExecutable=/opt/bb-code-server-next/app/bin/code-server
+Description=BeagleBoard.org Code Server
+Documentation=https://github.com/coder/code-server/tree/main/docs
+Wants=network.target dphys-swapfile.service
+After=multi-user.target
 
 [Service]
 Type=exec
-ExecStart=/opt/bb-code-server-next/app/bin/code-server --auth none --disable-telemetry --disable-update-check --config /opt/bb-code-server-next/config/config.yaml --extensions-dir /opt/bb-code-server-next/extensions/ --bind-addr 0.0.0.0:3000
-Restart=always
 User=debian
+Group=debian
+ExecStartPre=/bin/ln -sf /opt/vsx-examples/examples/ /home/debian/
+ExecStartPre=/bin/mkdir -p /home/debian/.local/share/code-server/User/
+ExecStartPre=/bin/cp /opt/vsx-examples/examples/settings.json /home/debian/.local/share/code-server/User/
+ExecStart=/opt/bb-code-server-next/app/bin/code-server --auth none --disable-telemetry --disable-update-check --config /opt/bb-code-server-next/config/config.yaml --extensions-dir /opt/bb-code-server-next/extensions/ --bind-addr 0.0.0.0:3000 /home/debian/examples/BeagleBoard.code-workspace
+Restart=always
+RestartSec=15
 
 [Install]
 WantedBy=multi-user.target
