--- a/bb-code-server-next/suite/bullseye/debian/control
+++ b/bb-code-server-next/suite/bullseye/debian/control
@@ -2,14 +2,21 @@ Source: bb-code-server-next
 Section: misc
 Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
-Build-Depends: debhelper (>= 10)
+Build-Depends:
+ debhelper (>= 10)
 Standards-Version: 4.5.1
-Homepage: https://github.com/cdr/code-server
+Homepage: https://github.com/coder/code-server
 
 Package: bb-code-server-next
 Architecture: armhf
-Pre-Depends: ${misc:Pre-Depends}, adduser, git
-Depends: ${shlibs:Depends}, ${misc:Depends}, systemd (>= 230)
+Pre-Depends:
+ ${misc:Pre-Depends}
+ , bbb.io-vsx-examples
+Depends:
+ systemd (>= 230)
+ , dphys-swapfile
+Breaks: npm, bb-code-server
+Conflicts: npm, bb-code-server
 Description: code-server installer for beagleboard.org
  code-server is a tool to Run VS Code on any machine anywhere and access it in the browser.
 
