bb-code-server-next (4.1.0.1-0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-code-server-next/suite/bullseye/debian/control
+++ b/bb-code-server-next/suite/bullseye/debian/control
@@ -12,6 +12,7 @@ Architecture: armhf
 Pre-Depends:
  ${misc:Pre-Depends}
  , bbb.io-vsx-examples
+ , libatomic1
 Depends:
  systemd (>= 230)
  , dphys-swapfile
