--- a/bb-code-server/suite/buster/debian/control
+++ b/bb-code-server/suite/buster/debian/control
@@ -12,6 +12,7 @@ Architecture: armhf
 Pre-Depends:
  ${misc:Pre-Depends}
  , bbb.io-vsx-examples
+ , libatomic1
 Depends:
  systemd (>= 230)
  , dphys-swapfile
