--- a/bbb.io-kernel/suite/buster/debian/control
+++ b/bbb.io-kernel/suite/buster/debian/control
@@ -207,6 +207,7 @@ Depends:
 Recommends:
  libpruio-modules-5.10.100-ti-r38
  , ti-sgx-ti335x-modules-5.10.100-ti-r38
+ , qcacld-2.0-modules-5.10.100-ti-r38
  , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 5.10-ti for am335x
  This metapackage will install linux-image-5.10-ti for am335x in Debian.
@@ -249,6 +250,7 @@ Depends:
 Recommends:
  libpruio-modules-5.10.100-ti-rt-r38
  , ti-sgx-ti335x-modules-5.10.100-ti-rt-r38
+ , qcacld-2.0-modules-5.10.100-ti-rt-r38
  , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 5.10-ti-rt for am335x
  This metapackage will install linux-image-5.10-ti-rt for am335x in Debian.
