--- a/bbb.io-kernel/suite/buster/debian/control
+++ b/bbb.io-kernel/suite/buster/debian/control
@@ -324,6 +324,15 @@ Recommends: libpruio-modules-5.16.15-bone17,
 Description: BeagleBoard.org 5.16-bone for am335x
  This metapackage will install linux-image-5.16-bone for am335x in Debian.
 
+Package: bbb.io-kernel-5.17-bone
+Section: metapackages
+Architecture: all
+Pre-Depends: linux-image-5.17.0-bone8,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.17.0-bone8,
+Description: BeagleBoard.org 5.17-bone for am335x
+ This metapackage will install linux-image-5.17-bone for am335x in Debian.
+
 Package: bbb.io-kernel-4.19-bone-rt
 Section: metapackages
 Architecture: all
